--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -19,124 +19,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
-<!-- Carousel wrapper -->
-  {% comment %} {% if carousels %}
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-	<div class="carousel-inner">
-	{% for carousel in carousels %}
-      <div class="carousel-item {% if forloop.first %}active{% endif %}">
-        <img class="d-block carousel-image-home" style="object-fit:contain" width="100vw" src="{{carousel.image.url}}" alt="">
-      </div>
-    {% endfor %}
-	</div>
-	<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Next</span>
-	</a>
-  </div>
-  {% endif %}
-  {% if carousels %}
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-	  {% for carousel in carousels %}
-	  <li data-target="#carouselExampleIndicators" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %}"></li>
-	  {% endfor %}
-	</ol>
-	<div class="carousel-inner">
-	  {% for carousel in carousels %}
-	  <div class="carousel-item {% if loop.first %}active{% endif %}">
-		<img src="{{ carousel.image.url }}" class="d-block w-100" alt="">
-	  </div>
-	  {% endfor %}
-	</div>
-	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Next</span>
-	</a>
-  </div>
-  {% endif %} {% endcomment %}
-
-
-
-
-{% comment %} <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner overflow-hidden">
-    <div class="carousel-item active">
-      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block w-100 h-80" style="object-fit: contain;" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block w-100 h-80" style="object-fit: contain;" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> {% endcomment %}
-
-{% comment %} <section class="hero-wrap hero-wrap-2 js-fullheight">
-	{% comment %} <div class="hero-wrap ftco-degree-bg"> {% endcomment %}
-		{% comment %} <div class="overlay"></div> {% endcomment %}
-		{% comment %} <video autoplay muted loop poster="path/to/default-thumbnail.jpg" id="bg-video"
-			style="width: 100%; height: 100%; object-fit: cover;">
-			<source src="{% static 'videos/Belipark video.mp4' %}" type="video/mp4">
-		</video> {% endcomment %}
-		{% comment %} <div class="container">
-			<div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
-				<div class="col-lg-8 ftco-animate">
-					<div class="text w-100 text-center mb-md-5 pb-md-5">
-						<h1 class="mb-4 text text-black">Fast &amp; Easy Way To Rent A Car</h1>
-						<p style="font-size: 18px;">A small river named Duden flows by their place and supplies it with
-							the necessary regelialia. It is a paradisematic country, in which roasted parts</p>
-						<a href="https://vimeo.com/45830194"
-							class="icon-wrap popup-vimeo d-flex align-items-center mt-4 justify-content-center">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="ion-ios-play"></span>
-							</div>
-							<div class="heading-title ml-5">
-								<span>Easy steps for renting a car</span>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div> {% endcomment %}
-		{% comment %}
-	</div> 
-</section> {% endcomment %}
-{% comment %} <section class="ftco-section ftco-intro" style="background-color: #d2b570;">
-	<div class="overlay"></div>
-	<div class="container">
-		<div class="row justify-content-end">
-			<div class="col-md-6 heading-section heading-section-white ftco-animate">
-				<h4 class="mb-3">Grant Beli Park is going to be landmark of Betma-Indore.This township being developed
-					with imaginative advanced engineering and landscape designing,introducing a redefined urban living
-					style</h4>
-			</div>
-		</div>
-	</div>
-</section> {% endcomment %}
-
 <!-- About Start -->
 <div class="container-fluid about">
 	<div class="container py-5">
 		<div class="row g-5 align-items-center">
-			{% comment %} <div class="col-lg-5">
-				<img src="{% static 'images/logo.png' %}" class="img-fluid w-100 h-100" alt="">
-			</div> {% endcomment %}
 			<div class="col-sm-12"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
 				<h1 class="section-about-title pe-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
@@ -161,59 +47,11 @@
 					understanding the needs of the market and
 					catering to it exclusively in our own trademark
 					style!</p>
-
-				{% comment %} <div class="row gy-2 gx-4 mb-4">
-					<div class="col-sm-6">
-						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
-					</div>
-					<div class="col-sm-6">
-						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Handpicked Hotels</p>
-					</div>
-					<div class="col-sm-6">
-						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>5 Star Accommodations</p>
-					</div>
-					<div class="col-sm-6">
-						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
-					</div>
-					<div class="col-sm-6">
-						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>150 Premium City Tours</p>
-					</div>
-					<div class="col-sm-6">
-						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
-					</div>
-				</div> {% endcomment %}
 				<a class="btn btn-primary rounded-pill py-3 px-5 mt-2 read-btn" href="{% url 'home:about_view' %}">Read More</a>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- About End -->
-{% comment %} About US {% endcomment %}
-{% comment %} <section class="ftco-section ftco-about">
-	<div class="container">
-		<div class="row no-gutters">
-			<div class="col-md-4 p-md-5 img img-2 d-flex" style="background-image: url(images/about.jpg);">
-			</div>
-			<div class="col-md-8 wrap-about ftco-animate">
-				<div class="heading-section heading-section-white pl-md-5">
-					<span class="subheading">About us</span>
-					<h2 class="mb-4">Welcome to Carbook</h2>
-
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It
-						is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it
-						would have been rewritten a thousand times and everything that was left from its origin would be
-						the word "and" and the Little Blind Text should turn around and return to its own, safe country.
-						A small river named Duden flows by their place and supplies it with the necessary regelialia. It
-						is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-					<p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section> {% endcomment %}
-<!-- About End -->
-
 <section class="ftco-section">
 	<div class="container">
 		<div class="row mb-5">
@@ -228,8 +66,6 @@
 							class="flaticon-wedding-car"></span></div>
 					<div class="text w-100 ">
 						<h3 class="heading mb-2">360&#176 Security Camera</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -239,8 +75,6 @@
 							class="flaticon-transportation"></span></div>
 					<div class="text w-100">
 						<h3 class="heading mb-2">Solar System for Street Lights</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -250,8 +84,6 @@
 							class="flaticon-car"></span></div>
 					<div class="text w-100">
 						<h3 class="heading mb-2">Drip Irrigation System</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -261,8 +93,6 @@
 							class="flaticon-transportation"></span></div>
 					<div class="text w-100">
 						<h3 class="heading mb-2">Wide RCC Roads</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -274,8 +104,6 @@
 							class="flaticon-wedding-car"></span></div>
 					<div class="text w-100">
 						<h3 class="heading mb-2">Road Side Pover Block</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -285,8 +113,6 @@
 							class="flaticon-transportation"></span></div>
 					<div class="text w-100">
 						<h3 class="heading mb-2">Water Tank with underground Supply Line</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -297,8 +123,6 @@
 					<div class="text w-100">
 						<h3 class="heading mb-2">Underground Drainage Line with
 							Severage treatment plant</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -309,31 +133,12 @@
 					<div class="text w-100">
 						<h3 class="heading mb-2">Underground Storm Water line
 							with Water recharging pit</h3>
-						{% comment %} <p>A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p> {% endcomment %}
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-
-{% comment %} <!-- Start callto Area -->
-<section class="callto-area section-gap relative">
-	<div class="overlay overlay-bg"></div>
-	<div class="container">
-		<div class="row">
-			<div class="call-wrap mx-auto">
-				<h1>View Our Project </h1>
-				<a id="play-home-video" class="video-play-button" href="https://www.youtube.com/watch?v=_C5vCGB8Xx0">
-					<span></span>
-				</a>
-				<p>05:35</p>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End callto Area --> {% endcomment %}
 
 <div class="container-fluid about">
 	<div class="container py-5">
@@ -411,9 +216,6 @@
 			</div>
 		</div>
 		<div class="row">
-			{% comment %} <div class="col-md-6">
-				<img src="{% static '' %}" width="100%" alt="">
-			</div> {% endcomment %}
 			<div class="col-md-12 block-9 mb-md-5">
 				<div id="contact_us_form"></div>
             <form onSubmit="contactForm(event)" method="POST" class="bg-light p-5 contact-form">
@@ -425,7 +227,7 @@
                 <input type="text" class="form-control" name="email" placeholder="Your Email">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" placeholder="Subject">
+                <input type="phone2numeric" class="form-control" name="phone_number" placeholder="Phone Number">
               </div>
               <div class="form-group">
                 <textarea id="" cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
